2007-07-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-set-file-times): New defun.  Replaces
	`tramp-touch'.
	(tramp-file-name-handler-alist, tramp-file-name-for-operation):
	Add entry for `set-file-times'.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-out-of-band): Use `set-file-times'.
	(tramp-handle-unhandled-file-name-directory): Rewrite.
	(tramp-convert-file-attributes): Add error handling when inode is
	extraordinary big.
	(tramp-get-inode): Change parameter from FILE to VEC.

	* tramp-fish.el (tramp-fish-file-name-handler-alist): Add entry
	for `set-file-times'.  Rename `start-process' into
	`start-file-process'.  Remove `call-process' entry.
	(tramp-fish-handle-set-file-times): New defun.
	(tramp-fish-handle-executable-find): Use `process-file'.
	(tramp-fish-handle-process-file): New defun.  Replaces
	`tramp-fish-handle-call-process'.
	(tramp-fish-do-copy-or-rename-file-directly): Use
	`set-file-times'.
	(tramp-fish-get-file-entries): Change `tramp-get-inode' parameter.

	* tramp-smb.el (tramp-smb-handle-file-attributes): Change
	`tramp-get-inode' parameter.

	* tramp-util.el (all): Change all checks to (fboundp
	'start-file-process).
	(set-file-times): Add a defalias if function does not exist.

2007-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods, tramp-find-shell)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-maybe-open-connection): Guard against $PROMPT_COMMAND shell
	var.  Reported by Steve Youngs <steve@sxemacs.org>.
	(tramp-handle-start-file-process ): Use (current-buffer) if BUFFER
	is NIL.  This is according to the specification.  Goto (point-max)
	when ready.
	(tramp-handle-shell-command): Rewrite completely, using
	`process-file' and `start-file-process'.
	(tramp-touch): Don't use variable expansion when calling
	`shell-command'.

2007-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter