@@ -1,3 +1,11 @@
+2007-07-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
+	IDENTIFICATION.
+
+	* tramp-util.el (tramp-advice-file-remote-p): Handle optional
+	parameter IDENTIFICATION.
+
 2007-07-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-set-file-times): New defun.  Replaces
